@@ -20,6 +20,7 @@ import java.awt.Toolkit;
 import java.awt.datatransfer.Clipboard;
 import java.awt.datatransfer.DataFlavor;
 import java.awt.datatransfer.UnsupportedFlavorException;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
@@ -32,34 +33,26 @@ import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Locale;
-import java.util.Properties;
-import java.util.Set;
-import java.util.Stack;
-import java.util.StringJoiner;
+import java.util.*;
 import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-import com.fasterxml.jackson.dataformat.yaml.YAMLMapper;
-import io.apicurio.datamodels.Library;
-import io.apicurio.datamodels.models.openapi.OpenApiDocument;
-import org.apache.camel.CamelContext;
+import org.apache.camel.FailedToCreateRouteException;
 import org.apache.camel.catalog.CamelCatalog;
 import org.apache.camel.catalog.DefaultCamelCatalog;
 import org.apache.camel.dsl.jbang.core.common.CommandLineHelper;
 import org.apache.camel.dsl.jbang.core.common.LoggingLevelCompletionCandidates;
+import org.apache.camel.dsl.jbang.core.common.Printer;
+import org.apache.camel.dsl.jbang.core.common.RuntimeCompletionCandidates;
+import org.apache.camel.dsl.jbang.core.common.RuntimeType;
+import org.apache.camel.dsl.jbang.core.common.RuntimeTypeConverter;
 import org.apache.camel.dsl.jbang.core.common.RuntimeUtil;
+import org.apache.camel.dsl.jbang.core.common.Source;
+import org.apache.camel.dsl.jbang.core.common.SourceHelper;
+import org.apache.camel.dsl.jbang.core.common.SourceScheme;
 import org.apache.camel.dsl.jbang.core.common.VersionHelper;
-import org.apache.camel.generator.openapi.RestDslGenerator;
-import org.apache.camel.impl.DefaultCamelContext;
 import org.apache.camel.main.KameletMain;
 import org.apache.camel.main.download.DownloadListener;
 import org.apache.camel.spi.BacklogDebugger;
@@ -69,7 +62,10 @@ import org.apache.camel.util.CamelCaseOrderedProperties;
 import org.apache.camel.util.FileUtil;
 import org.apache.camel.util.IOHelper;
 import org.apache.camel.util.ObjectHelper;
+import org.apache.camel.util.StopWatch;
 import org.apache.camel.util.StringHelper;
+import org.apache.camel.util.json.JsonObject;
+import org.apache.camel.util.json.Jsoner;
 import org.apache.camel.xml.io.util.XmlStreamDetector;
 import org.apache.camel.xml.io.util.XmlStreamInfo;
 import picocli.CommandLine;
@@ -77,18 +73,18 @@ import picocli.CommandLine.Command;
 import picocli.CommandLine.Option;
 import picocli.CommandLine.Parameters;
 
+import static org.apache.camel.dsl.jbang.core.common.CamelCommandHelper.CAMEL_INSTANCE_TYPE;
+import static org.apache.camel.dsl.jbang.core.common.CamelCommandHelper.extractState;
 import static org.apache.camel.dsl.jbang.core.common.GistHelper.asGistSingleUrl;
 import static org.apache.camel.dsl.jbang.core.common.GistHelper.fetchGistUrls;
 import static org.apache.camel.dsl.jbang.core.common.GitHubHelper.asGithubSingleUrl;
 import static org.apache.camel.dsl.jbang.core.common.GitHubHelper.fetchGithubUrls;
 
-@Command(name = "run", description = "Run as local Camel integration")
+@Command(name = "run", description = "Run as local Camel integration", sortOptions = false, showDefaultValues = true)
 public class Run extends CamelCommand {
 
     public static final String RUN_SETTINGS_FILE = "camel-jbang-run.properties";
-
-    private static final String[] ACCEPTED_FILE_EXT
-            = new String[] { "java", "groovy", "js", "jsh", "kts", "xml", "yaml" };
+    private static final String RUN_PLATFORM_DIR = ".camel-jbang-run";
 
     private static final String[] ACCEPTED_XML_ROOT_ELEMENT_NAMES = new String[] {
             "route", "routes",
@@ -111,7 +107,7 @@ public class Run extends CamelCommand {
     private static final Pattern CLASS_PATTERN = Pattern.compile(
             "^\\s*public class\\s+([a-zA-Z0-9]*)[\\s+|;].*$", Pattern.MULTILINE);
 
-    public boolean silentRun;
+    public boolean exportRun;
     boolean scriptRun;
     boolean transformRun;
     boolean transformMessageRun;
@@ -120,11 +116,20 @@ public class Run extends CamelCommand {
     private File logFile;
     public long spawnPid;
 
+    private Printer quietPrinter;
+
     @Parameters(description = "The Camel file(s) to run. If no files specified then application.properties is used as source for which files to run.",
                 arity = "0..9", paramLabel = "<files>", parameterConsumer = FilesConsumer.class)
     Path[] filePaths; // Defined only for file path completion; the field never used
 
     public List<String> files = new ArrayList<>();
+
+    @Option(names = { "--runtime" },
+            completionCandidates = RuntimeCompletionCandidates.class,
+            defaultValue = "camel-main",
+            converter = RuntimeTypeConverter.class,
+            description = "Runtime (${COMPLETION-CANDIDATES})")
+    RuntimeType runtime = RuntimeType.main;
 
     @Option(names = { "--source-dir" },
             description = "Source directory for dynamically loading Camel file(s) to run. When using this, then files cannot be specified at the same time.")
@@ -133,26 +138,50 @@ public class Run extends CamelCommand {
     @Option(names = { "--background" }, defaultValue = "false", description = "Run in the background")
     public boolean background;
 
+    @Option(names = { "--background-wait" }, defaultValue = "true",
+            description = "To wait for run in background to startup successfully, before returning")
+    public boolean backgroundWait = true;
+
     @Option(names = { "--empty" }, defaultValue = "false", description = "Run an empty Camel without loading source files")
     public boolean empty;
 
     @Option(names = { "--camel-version" }, description = "To run using a different Camel version than the default version.")
     String camelVersion;
 
+    @Option(names = { "--camel-spring-boot-version" },
+            description = "To run using a different Camel Spring Boot version than the default version.")
+    String camelSpringBootVersion;
+
     @Option(names = { "--kamelets-version" }, description = "Apache Camel Kamelets version")
     String kameletsVersion;
+
+    @CommandLine.Option(names = { "--quarkus-group-id" }, description = "Quarkus Platform Maven groupId",
+                        defaultValue = "io.quarkus.platform")
+    String quarkusGroupId = "io.quarkus.platform";
+
+    @CommandLine.Option(names = { "--quarkus-artifact-id" }, description = "Quarkus Platform Maven artifactId",
+                        defaultValue = "quarkus-bom")
+    String quarkusArtifactId = "quarkus-bom";
+
+    @Option(names = { "--quarkus-version" }, description = "Quarkus Platform version",
+            defaultValue = RuntimeType.QUARKUS_VERSION)
+    String quarkusVersion = RuntimeType.QUARKUS_VERSION;
+
+    @Option(names = { "--spring-boot-version" }, description = "Spring Boot version",
+            defaultValue = RuntimeType.SPRING_BOOT_VERSION)
+    String springBootVersion = RuntimeType.SPRING_BOOT_VERSION;
 
     @Option(names = { "--profile" }, scope = CommandLine.ScopeType.INHERIT, defaultValue = "dev",
             description = "Profile to run (dev, test, or prod).")
     String profile = "dev";
 
-    @Option(names = {
-            "--dep", "--deps" }, description = "Add additional dependencies (Use commas to separate multiple dependencies)")
-    String dependencies;
+    @Option(names = { "--dep", "--dependency" }, description = "Add additional dependencies",
+            split = ",")
+    List<String> dependencies = new ArrayList<>();
 
-    @Option(names = { "--repos" },
-            description = "Additional maven repositories for download on-demand (Use commas to separate multiple repositories)")
-    String repos;
+    @CommandLine.Option(names = { "--repos" },
+                        description = "Additional maven repositories (Use commas to separate multiple repositories)")
+    String repositories;
 
     @Option(names = { "--gav" }, description = "The Maven group:artifact:version (used during exporting)")
     String gav;
@@ -189,15 +218,14 @@ public class Run extends CamelCommand {
     @Option(names = { "--name" }, defaultValue = "CamelJBang", description = "The name of the Camel application")
     String name;
 
-    @Option(names = { "--exclude" },
-            description = "Exclude files by name or pattern. Multiple names can be separated by comma.")
-    String exclude;
+    @CommandLine.Option(names = { "--exclude" }, description = "Exclude files by name or pattern")
+    List<String> excludes = new ArrayList<>();
 
     @Option(names = { "--logging" }, defaultValue = "true", description = "Can be used to turn off logging")
     boolean logging = true;
 
     @Option(names = { "--logging-level" }, completionCandidates = LoggingLevelCompletionCandidates.class,
-            defaultValue = "info", description = "Logging level")
+            defaultValue = "info", description = "Logging level (${COMPLETION-CANDIDATES})")
     String loggingLevel;
 
     @Option(names = { "--logging-color" }, defaultValue = "true", description = "Use colored logging")
@@ -208,6 +236,9 @@ public class Run extends CamelCommand {
 
     @Option(names = { "--logging-config-path" }, description = "Path to file with custom logging configuration")
     String loggingConfigPath;
+
+    @Option(names = { "--logging-category" }, description = "Used for individual logging levels (ex: org.apache.kafka=DEBUG)")
+    List<String> loggingCategory = new ArrayList<>();
 
     @Option(names = { "--max-messages" }, defaultValue = "0", description = "Max number of messages to process before stopping")
     int maxMessages;
@@ -250,26 +281,32 @@ public class Run extends CamelCommand {
             description = "Local directory (or github link) for loading Kamelets (takes precedence). Multiple directories can be specified separated by comma.")
     String localKameletDir;
 
-    @Option(names = { "--port" }, description = "Embeds a local HTTP server on this port")
+    @Option(names = { "--port" }, description = "Embeds a local HTTP server on this port", defaultValue = "8080")
     int port;
 
     @Option(names = { "--console" }, description = "Developer console at /q/dev on local HTTP server (port 8080 by default)")
     boolean console;
 
-    @Option(names = { "--health" }, description = "Health check at /q/health on local HTTP server (port 8080 by default)")
+    @Option(names = { "--health" },
+            description = "Deprecated: use --observe instead. Health check at /q/health on local HTTP server (port 8080 by default)")
     boolean health;
 
     @Option(names = { "--metrics" },
-            description = "Metrics (Micrometer and Prometheus) at /q/metrics on local HTTP server (port 8080 by default)")
+            description = "Deprecated: use --observe instead. Metrics (Micrometer and Prometheus) at /q/metrics on local HTTP server (port 8080 by default)")
     boolean metrics;
 
-    @Option(names = { "--modeline" }, defaultValue = "true", description = "Enables Camel-K style modeline")
+    @Option(names = { "--observe" },
+            description = "Enable observability services")
+    boolean observe;
+
+    @Option(names = { "--modeline" }, defaultValue = "true",
+            description = "Deprecated, to be removed: Enables Camel-K style modeline")
     boolean modeline = true;
 
     @Option(names = { "--open-api" }, description = "Adds an OpenAPI spec from the given file (json or yaml file)")
     String openapi;
 
-    @Option(names = { "--code" }, description = "Run the given string as Java DSL route")
+    @Option(names = { "--code" }, description = "Run the given text or file as Java DSL routes")
     String code;
 
     @Option(names = { "--verbose" }, description = "Verbose output of startup activity (dependency resolution and downloading")
@@ -278,6 +315,10 @@ public class Run extends CamelCommand {
     @Option(names = { "--ignore-loading-error" },
             description = "Whether to ignore route loading and compilation errors (use this with care!)")
     protected boolean ignoreLoadingError;
+
+    @Option(names = { "--lazy-bean" },
+            description = "Whether to use lazy bean initialization (can help with complex classloading issues")
+    protected boolean lazyBean;
 
     @Option(names = { "--prompt" },
             description = "Allow user to type in required parameters in prompt if not present in application")
@@ -289,25 +330,31 @@ public class Run extends CamelCommand {
 
     @Override
     public boolean disarrangeLogging() {
+        if (RuntimeType.quarkus == runtime) {
+            return true;
+        } else if (RuntimeType.springBoot == runtime) {
+            return true;
+        }
         return false;
     }
 
     @Override
     public Integer doCall() throws Exception {
-        if (!silentRun) {
+        if (!exportRun) {
             printConfigurationValues("Running integration with the following configuration:");
         }
         // run
         return run();
     }
 
-    public Integer runSilent() throws Exception {
-        return runSilent(false);
+    public Integer runExport() throws Exception {
+        return runExport(false);
     }
 
-    protected Integer runSilent(boolean ignoreLoadingError) throws Exception {
+    protected Integer runExport(boolean ignoreLoadingError) throws Exception {
         // just boot silently and exit
-        this.silentRun = true;
+        this.exportRun = true;
+        this.ignoreLoadingError = ignoreLoadingError;
         return run();
     }
 
@@ -387,13 +434,35 @@ public class Run extends CamelCommand {
     private int run() throws Exception {
         if (!empty && !files.isEmpty() && sourceDir != null) {
             // cannot have both files and source dir at the same time
-            System.err.println("Cannot specify both file(s) and source-dir at the same time.");
+            printer().printErr("Cannot specify both file(s) and source-dir at the same time.");
             return 1;
+        }
+
+        // special if user type: camel run .
+        if (sourceDir == null && (files != null && files.size() == 1 && ".".equals(files.get(0)))) {
+            files.clear();
+            File[] fs = new File(".").listFiles();
+            if (fs != null) {
+                for (File f : fs) {
+                    // skip hidden files
+                    if (f.isFile() && !f.isHidden()) {
+                        files.add(f.getName());
+                    }
+                }
+            }
+        }
+
+        if (RuntimeType.quarkus == runtime) {
+            return runQuarkus();
+        } else if (RuntimeType.springBoot == runtime) {
+            return runSpringBoot();
         }
 
         File work = CommandLineHelper.getWorkDir();
         removeDir(work);
-        work.mkdirs();
+        if (!work.exists() && !work.mkdirs()) {
+            printer().println("WARN: Failed to create working directory: " + work.getAbsolutePath());
+        }
 
         Properties profileProperties = !empty ? loadProfileProperties() : null;
         configureLogging();
@@ -403,8 +472,23 @@ public class Run extends CamelCommand {
 
         // route code as option
         if (!empty && code != null) {
+            // code may refer to an existing file
+            String name = "CodeRoute";
+            boolean file = false;
+            File f = new File(code);
+            if (f.isFile() && f.exists()) {
+                // must be a java file
+                boolean java = f.getName().endsWith(".java");
+                if (!java) {
+                    printer().printErr("Only java source files is accepted when using --code parameter");
+                    return 1;
+                }
+                code = Files.readString(f.toPath());
+                name = FileUtil.onlyName(f.getName());
+                file = true;
+            }
             // store code in temporary file
-            String codeFile = loadFromCode(code);
+            String codeFile = loadFromCode(code, name, file);
             // use code as first file
             files.add(0, codeFile);
         }
@@ -423,7 +507,7 @@ public class Run extends CamelCommand {
                 String routes
                         = profileProperties != null ? profileProperties.getProperty("camel.main.routesIncludePattern") : null;
                 if (routes == null) {
-                    if (!silentRun) {
+                    if (!exportRun) {
                         String run = "run";
                         if (transformRun) {
                             run = "transform";
@@ -435,8 +519,8 @@ public class Run extends CamelCommand {
                                          + " because application.properties file does not exist or camel.main.routesIncludePattern is not configured");
                         return 1;
                     } else {
-                        // silent-run then auto-detect all files (except properties as they are loaded explicit)
-                        String[] allFiles = new File(".").list((dir, name) -> !name.endsWith(".properties"));
+                        // silent-run then auto-detect all files
+                        String[] allFiles = new File(".").list();
                         if (allFiles != null) {
                             files.addAll(Arrays.asList(allFiles));
                         }
@@ -451,7 +535,9 @@ public class Run extends CamelCommand {
 
         final KameletMain main = createMainInstance();
         main.setProfile(profile);
-        main.setRepos(repos);
+        if (repositories != null && !repositories.isBlank()) {
+            main.setRepositories(String.join(",", repositories));
+        }
         main.setDownload(download);
         main.setFresh(fresh);
         main.setMavenSettings(mavenSettings);
@@ -498,6 +584,9 @@ public class Run extends CamelCommand {
         if (ignoreLoadingError) {
             writeSetting(main, profileProperties, "camel.jbang.ignoreLoadingError", "true");
         }
+        if (lazyBean) {
+            writeSetting(main, profileProperties, "camel.jbang.lazyBean", "true");
+        }
         if (prompt) {
             writeSetting(main, profileProperties, "camel.jbang.prompt", "true");
         }
@@ -508,13 +597,23 @@ public class Run extends CamelCommand {
             writeSetting(main, profileProperties, "camel.jbang.gav", gav);
         }
         writeSetting(main, profileProperties, "camel.jbang.open-api", openapi);
-        writeSetting(main, profileProperties, "camel.jbang.repos", repos);
+        if (repositories != null) {
+            writeSetting(main, profileProperties, "camel.jbang.repos", String.join(",", repositories));
+        }
         writeSetting(main, profileProperties, "camel.jbang.health", health ? "true" : "false");
         writeSetting(main, profileProperties, "camel.jbang.metrics", metrics ? "true" : "false");
         writeSetting(main, profileProperties, "camel.jbang.console", console ? "true" : "false");
         writeSetting(main, profileProperties, "camel.jbang.verbose", verbose ? "true" : "false");
         // the runtime version of Camel is what is loaded via the catalog
         writeSetting(main, profileProperties, "camel.jbang.camel-version", new DefaultCamelCatalog().getCatalogVersion());
+        writeSetting(main, profileProperties, "camel.jbang.springBootVersion", springBootVersion);
+        writeSetting(main, profileProperties, "camel.jbang.quarkusVersion", quarkusVersion);
+        writeSetting(main, profileProperties, "camel.jbang.quarkusGroupId", quarkusGroupId);
+        writeSetting(main, profileProperties, "camel.jbang.quarkusArtifactId", quarkusArtifactId);
+
+        if (observe) {
+            main.addInitialProperty("camel.jbang.dependencies", "camel:observability-services");
+        }
 
         // command line arguments
         if (property != null) {
@@ -528,8 +627,9 @@ public class Run extends CamelCommand {
             }
         }
 
-        if (silentRun) {
+        if (exportRun) {
             main.setSilent(true);
+            main.addInitialProperty("camel.jbang.export", "true");
             // enable stub in silent mode so we do not use real components
             main.setStubPattern("*");
             // do not run for very long in silent run
@@ -561,7 +661,7 @@ public class Run extends CamelCommand {
         writeSetting(main, profileProperties, "camel.main.durationMaxIdleSeconds",
                 () -> maxIdleSeconds > 0 ? String.valueOf(maxIdleSeconds) : null);
         writeSetting(main, profileProperties, "camel.jbang.platform-http.port",
-                () -> port > 0 ? String.valueOf(port) : null);
+                () -> port > 0 && port != 8080 ? String.valueOf(port) : null);
         writeSetting(main, profileProperties, "camel.jbang.jfr", jfr || jfrProfile != null ? "jfr" : null); // TODO: "true" instead of "jfr" ?
         writeSetting(main, profileProperties, "camel.jbang.jfr-profile", jfrProfile != null ? jfrProfile : null);
 
@@ -570,6 +670,8 @@ public class Run extends CamelCommand {
         StringJoiner js = new StringJoiner(",");
         StringJoiner sjReload = new StringJoiner(",");
         StringJoiner sjClasspathFiles = new StringJoiner(",");
+        StringJoiner sjScriptFiles = new StringJoiner(",");
+        StringJoiner sjTlsFiles = new StringJoiner(",");
         StringJoiner sjKamelets = new StringJoiner(",");
         StringJoiner sjJKubeFiles = new StringJoiner(",");
 
@@ -587,16 +689,15 @@ public class Run extends CamelCommand {
             // find source files
             files = RunHelper.scanMavenOrGradleProject();
             // include extra dependencies from pom.xml
-            List<String> deps = RunHelper.scanMavenDependenciesFromPom();
-            for (String d : deps) {
-                if (dependencies == null) {
-                    dependencies = "";
-                }
-                if (dependencies.isBlank()) {
-                    dependencies = d;
-                } else {
-                    dependencies += "," + d;
-                }
+            var pomDependencies = RunHelper.scanMavenDependenciesFromPom();
+            addDependencies(pomDependencies.toArray(new String[0]));
+        }
+
+        if (profile != null) {
+            // need to include profile application properties if exists
+            String name = "application-" + profile + ".properties";
+            if (new File(name).exists() && !files.contains(name)) {
+                files.add(name);
             }
         }
 
@@ -605,12 +706,20 @@ public class Run extends CamelCommand {
                 file = loadFromClipboard(file);
             } else if (skipFile(file)) {
                 continue;
+            } else if (isScriptFile(file)) {
+                // script files
+                sjScriptFiles.add(file);
+                continue;
+            } else if (isTlsFile(file)) {
+                // tls files
+                sjTlsFiles.add(file);
+                continue;
             } else if (jkubeFile(file)) {
                 // jkube
                 sjJKubeFiles.add(file);
                 continue;
             } else if (!knownFile(file) && !file.endsWith(".properties")) {
-                // non known files to be added on classpath
+                // unknown files to be added on classpath
                 sjClasspathFiles.add(file);
                 continue;
             }
@@ -644,7 +753,7 @@ public class Run extends CamelCommand {
                 // check if file exist
                 File inputFile = new File(file.substring(5));
                 if (!inputFile.exists() && !inputFile.isFile()) {
-                    System.err.println("File does not exist: " + file);
+                    printer().printErr("File does not exist: " + file);
                     return 1;
                 }
             }
@@ -689,7 +798,7 @@ public class Run extends CamelCommand {
             // must be an existing directory
             File dir = new File(sourceDir);
             if (!dir.exists() && !dir.isDirectory()) {
-                System.err.println("Directory does not exist: " + sourceDir);
+                printer().printErr("Directory does not exist: " + sourceDir);
                 return 1;
             }
             // make it a pattern as we load all files from this directory
@@ -708,6 +817,18 @@ public class Run extends CamelCommand {
             writeSettings("camel.jbang.classpathFiles", sjClasspathFiles.toString());
         } else {
             writeSetting(main, profileProperties, "camel.jbang.classpathFiles", () -> null);
+        }
+        if (sjScriptFiles.length() > 0) {
+            main.addInitialProperty("camel.jbang.scriptFiles", sjScriptFiles.toString());
+            writeSettings("camel.jbang.scriptFiles", sjScriptFiles.toString());
+        } else {
+            writeSetting(main, profileProperties, "camel.jbang.scriptFiles", () -> null);
+        }
+        if (sjTlsFiles.length() > 0) {
+            main.addInitialProperty("camel.jbang.tlsFiles", sjTlsFiles.toString());
+            writeSettings("camel.jbang.tlsFiles", sjTlsFiles.toString());
+        } else {
+            writeSetting(main, profileProperties, "camel.jbang.tlsFiles", () -> null);
         }
         if (sjJKubeFiles.length() > 0) {
             main.addInitialProperty("camel.jbang.jkubeFiles", sjJKubeFiles.toString());
@@ -771,15 +892,11 @@ public class Run extends CamelCommand {
         }
 
         // merge existing dependencies with --deps
-        String deps = RuntimeUtil.getDependencies(profileProperties);
-        if (deps.isBlank()) {
-            deps = dependencies != null ? dependencies : "";
-        } else if (dependencies != null && !dependencies.equals(deps)) {
-            deps += "," + dependencies;
-        }
-        if (!deps.isBlank()) {
-            main.addInitialProperty("camel.jbang.dependencies", deps);
-            writeSettings("camel.jbang.dependencies", deps);
+        addDependencies(RuntimeUtil.getDependenciesAsArray(profileProperties));
+        if (!dependencies.isEmpty()) {
+            var joined = String.join(",", dependencies);
+            main.addInitialProperty("camel.jbang.dependencies", joined);
+            writeSettings("camel.jbang.dependencies", joined);
         }
 
         // if we have a specific camel version then make sure we really need to switch
@@ -793,7 +910,8 @@ public class Run extends CamelCommand {
         }
 
         // okay we have validated all input and are ready to run
-        if (camelVersion != null || isDebugMode()) {
+        // (if exporting then we cannot run a different version)
+        if (!exportRun && camelVersion != null || isDebugMode()) {
             // TODO: debug camel specific version
             boolean custom = false;
             if (camelVersion != null) {
@@ -819,8 +937,177 @@ public class Run extends CamelCommand {
             return runBackground(main);
         } else {
             // run default in current JVM with same camel version
-            return runKameletMain(main);
+            try {
+                return runKameletMain(main);
+            } catch (FailedToCreateRouteException ex) {
+                if (ignoreLoadingError) {
+                    printer().printErr(ex);
+                    return 0;
+                }
+                throw ex;
+            }
         }
+    }
+
+    protected void addDependencies(String... deps) {
+        var depsArray = Optional.ofNullable(deps).orElse(new String[0]);
+        var depsList = Arrays.stream(depsArray).filter(tok -> !tok.isEmpty()).toList();
+        dependencies.addAll(depsList);
+    }
+
+    protected int runQuarkus() throws Exception {
+        if (background) {
+            printer().println("Run Camel Quarkus with --background is not supported");
+            return 1;
+        }
+
+        // create temp run dir
+        File runDir = new File(RUN_PLATFORM_DIR, Long.toString(System.currentTimeMillis()));
+        if (!this.background) {
+            runDir.deleteOnExit();
+        }
+
+        // export to hidden folder
+        ExportQuarkus eq = new ExportQuarkus(getMain());
+        eq.javaLiveReload = this.dev;
+        eq.symbolicLink = this.dev;
+        eq.mavenWrapper = true;
+        eq.gradleWrapper = false;
+        eq.quarkusVersion = this.quarkusVersion;
+        eq.quarkusGroupId = this.quarkusGroupId;
+        eq.quarkusArtifactId = this.quarkusArtifactId;
+        eq.camelVersion = this.camelVersion;
+        eq.kameletsVersion = this.kameletsVersion;
+        eq.exportDir = runDir.toString();
+        eq.localKameletDir = this.localKameletDir;
+        eq.excludes = this.excludes;
+        eq.filePaths = this.filePaths;
+        eq.files = this.files;
+        eq.name = this.name;
+        eq.gav = this.gav;
+        if (eq.gav == null) {
+            if (eq.name == null) {
+                eq.name = "jbang-run-dummy";
+            }
+            eq.gav = "org.example.project:" + eq.name + ":1.0-SNAPSHOT";
+        }
+        eq.dependencies = this.dependencies;
+        if (!this.exportRun) {
+            eq.addDependencies("camel:cli-connector");
+        }
+        eq.fresh = this.fresh;
+        eq.download = this.download;
+        eq.quiet = true;
+        eq.logging = false;
+        eq.loggingLevel = "off";
+        eq.ignoreLoadingError = this.ignoreLoadingError;
+        eq.lazyBean = this.lazyBean;
+        eq.applicationProperties = this.property;
+
+        printer().println("Running using Quarkus v" + eq.quarkusVersion + " (preparing and downloading files)");
+
+        // run export
+        int exit = eq.export();
+        if (exit != 0 || this.exportRun) {
+            return exit;
+        }
+
+        // run quarkus via maven
+        String mvnw = "/mvnw";
+        if (FileUtil.isWindows()) {
+            mvnw = "/mvnw.cmd";
+        }
+        ProcessBuilder pb = new ProcessBuilder();
+        pb.command(runDir + mvnw, "--quiet", "--file", runDir.getCanonicalPath() + File.separatorChar + "pom.xml", "package",
+                "quarkus:" + (dev ? "dev" : "run"));
+
+        pb.inheritIO(); // run in foreground (with IO so logs are visible)
+        Process p = pb.start();
+        this.spawnPid = p.pid();
+        // wait for that process to exit as we run in foreground
+        return p.waitFor();
+    }
+
+    protected int runSpringBoot() throws Exception {
+        if (background) {
+            printer().println("Run Camel Spring Boot with --background is not supported");
+            return 1;
+        }
+
+        // create temp run dir
+        File runDir = new File(RUN_PLATFORM_DIR, Long.toString(System.currentTimeMillis()));
+        if (!this.background) {
+            runDir.deleteOnExit();
+        }
+
+        // export to hidden folder
+        ExportSpringBoot eq = new ExportSpringBoot(getMain());
+        // Java codes reload is not supported in Spring Boot since it has to be recompiled to trigger the restart
+        eq.javaLiveReload = false;
+        eq.symbolicLink = this.dev;
+        eq.mavenWrapper = true;
+        eq.gradleWrapper = false;
+        eq.springBootVersion = this.springBootVersion;
+        eq.camelVersion = this.camelVersion;
+        eq.camelSpringBootVersion = this.camelSpringBootVersion != null ? this.camelSpringBootVersion : this.camelVersion;
+        eq.kameletsVersion = this.kameletsVersion;
+        eq.exportDir = runDir.toString();
+        eq.localKameletDir = this.localKameletDir;
+        eq.excludes = this.excludes;
+        eq.filePaths = this.filePaths;
+        eq.files = this.files;
+        eq.name = this.name;
+        eq.gav = this.gav;
+        eq.repositories = this.repositories;
+        if (eq.gav == null) {
+            if (eq.name == null) {
+                eq.name = "jbang-run-dummy";
+            }
+            eq.gav = "org.example.project:" + eq.name + ":1.0-SNAPSHOT";
+        }
+        eq.dependencies.addAll(this.dependencies);
+        if (!this.exportRun) {
+            eq.addDependencies("camel:cli-connector");
+        }
+        if (this.dev) {
+            // hot-reload of spring-boot
+            eq.addDependencies("mvn:org.springframework.boot:spring-boot-devtools");
+        }
+        eq.fresh = this.fresh;
+        eq.download = this.download;
+        eq.quiet = true;
+        eq.logging = false;
+        eq.loggingLevel = "off";
+        eq.ignoreLoadingError = this.ignoreLoadingError;
+        eq.lazyBean = this.lazyBean;
+        eq.applicationProperties = this.property;
+
+        printer().println("Running using Spring Boot v" + eq.springBootVersion + " (preparing and downloading files)");
+
+        // run export
+        int exit = eq.export();
+        if (exit != 0 || exportRun) {
+            return exit;
+        }
+
+        // prepare spring-boot for logging to file
+        InputStream is = Run.class.getClassLoader().getResourceAsStream("spring-boot-logback.xml");
+        eq.safeCopy(is, new File(eq.exportDir + "/src/main/resources/logback.xml"));
+
+        // run spring-boot via maven
+        ProcessBuilder pb = new ProcessBuilder();
+        String mvnw = "/mvnw";
+        if (FileUtil.isWindows()) {
+            mvnw = "/mvnw.cmd";
+        }
+        pb.command(runDir + mvnw, "--quiet", "--file", runDir.getCanonicalPath() + File.separatorChar + "pom.xml",
+                "spring-boot:run");
+
+        pb.inheritIO(); // run in foreground (with IO so logs are visible)
+        Process p = pb.start();
+        this.spawnPid = p.pid();
+        // wait for that process to exit as we run in foreground
+        return p.waitFor();
     }
 
     private boolean acceptPropertiesFile(String file) {
@@ -892,7 +1179,11 @@ public class Run extends CamelCommand {
             // application-profile.properties should override standard application.properties
             Properties override = doLoadAndInitProfileProperties(profilePropertiesFile);
             if (override != null) {
-                answer.putAll(override);
+                if (answer == null) {
+                    answer = override;
+                } else {
+                    answer.putAll(override);
+                }
             }
         }
 
@@ -912,7 +1203,7 @@ public class Run extends CamelCommand {
                     = "true".equals(answer.getProperty("loggingColor", loggingColor ? "true" : "false"));
             loggingJson
                     = "true".equals(answer.getProperty("loggingJson", loggingJson ? "true" : "false"));
-            repos = answer.getProperty("camel.jbang.repos", repos);
+            repositories = answer.getProperty("camel.jbang.repos", repositories);
             mavenSettings = answer.getProperty("camel.jbang.maven-settings", mavenSettings);
             mavenSettingsSecurity = answer.getProperty("camel.jbang.maven-settings-security", mavenSettingsSecurity);
             mavenCentralEnabled = "true"
@@ -922,12 +1213,17 @@ public class Run extends CamelCommand {
             openapi = answer.getProperty("camel.jbang.open-api", openapi);
             download = "true".equals(answer.getProperty("camel.jbang.download", download ? "true" : "false"));
             background = "true".equals(answer.getProperty("camel.jbang.background", background ? "true" : "false"));
+            backgroundWait = "true".equals(answer.getProperty("camel.jbang.backgroundWait", backgroundWait ? "true" : "false"));
             jvmDebugPort = parseJvmDebugPort(answer.getProperty("camel.jbang.jvmDebug", Integer.toString(jvmDebugPort)));
             camelVersion = answer.getProperty("camel.jbang.camel-version", camelVersion);
             kameletsVersion = answer.getProperty("camel.jbang.kameletsVersion", kameletsVersion);
+            springBootVersion = answer.getProperty("camel.jbang.springBootVersion", springBootVersion);
+            quarkusGroupId = answer.getProperty("camel.jbang.quarkusGroupId", quarkusGroupId);
+            quarkusArtifactId = answer.getProperty("camel.jbang.quarkusArtifactId", quarkusArtifactId);
+            quarkusVersion = answer.getProperty("camel.jbang.quarkusVersion", quarkusVersion);
             gav = answer.getProperty("camel.jbang.gav", gav);
             stub = answer.getProperty("camel.jbang.stub", stub);
-            exclude = answer.getProperty("camel.jbang.exclude", exclude);
+            excludes = RuntimeUtil.getCommaSeparatedPropertyAsList(answer, "camel.jbang.excludes", excludes);
         }
 
         return answer;
@@ -969,6 +1265,9 @@ public class Run extends CamelCommand {
         if (background) {
             cmds.remove("--background=true");
             cmds.remove("--background");
+            cmds.remove("--background-wait");
+            cmds.remove("--background-wait=false");
+            cmds.remove("--background-wait=true");
         }
         if (camelVersion != null) {
             cmds.remove("--camel-version=" + camelVersion);
@@ -994,8 +1293,8 @@ public class Run extends CamelCommand {
             cmds.removeIf(arg -> arg.startsWith("--jvm-debug"));
         }
 
-        if (repos != null) {
-            jbangArgs.add("--repos=" + repos);
+        if (repositories != null) {
+            jbangArgs.add("--repos=" + repositories);
         }
         jbangArgs.add("camel@apache/camel");
         jbangArgs.addAll(cmds);
@@ -1004,13 +1303,7 @@ public class Run extends CamelCommand {
         pb.command(jbangArgs);
 
         if (background) {
-            Process p = pb.start();
-            this.spawnPid = p.pid();
-            if (!silentRun && !transformRun && !transformMessageRun) {
-                printer().println("Running Camel integration: " + name + " (version: " + camelVersion
-                                  + ") in background with PID: " + p.pid());
-            }
-            return 0;
+            return runBackgroundProcess(pb, "Camel Main");
         } else {
             pb.inheritIO(); // run in foreground (with IO so logs are visible)
             Process p = pb.start();
@@ -1034,17 +1327,74 @@ public class Run extends CamelCommand {
 
         cmds.remove("--background=true");
         cmds.remove("--background");
+        cmds.remove("--background-wait=false");
+        cmds.remove("--background-wait=true");
+        cmds.remove("--background-wait");
 
         addCamelCommand(cmds);
 
         ProcessBuilder pb = new ProcessBuilder();
         pb.command(cmds);
+
+        return runBackgroundProcess(pb, "Camel Main");
+    }
+
+    protected int runBackgroundProcess(ProcessBuilder pb, String kind) throws Exception {
+        File log = null;
+        if (backgroundWait) {
+            // store background output in a log file to capture any error on startup
+            log = getRunBackgroundLogFile("" + new Random().nextLong());
+            log.deleteOnExit();
+            pb.redirectErrorStream(true);
+            pb.redirectOutput(log);
+        }
+
         Process p = pb.start();
         this.spawnPid = p.pid();
-        if (!silentRun && !transformRun && !transformMessageRun) {
-            printer().println("Running Camel integration: " + name + " in background with PID: " + p.pid());
+        if (!exportRun && !transformRun && !transformMessageRun) {
+            printer().println(
+                    "Running " + kind + ": " + name + " in background with PID: " + p.pid()
+                              + (backgroundWait ? " (waiting to startup)" : ""));
         }
-        return 0;
+
+        int ec = 0;
+        if (log != null) {
+            StopWatch watch = new StopWatch();
+            int state = 0; // state 5 is running
+            while (p.isAlive() && watch.taken() < 20000 && state < 5) {
+                JsonObject root = loadStatus(p.pid());
+                if (root != null) {
+                    JsonObject context = (JsonObject) root.get("context");
+                    if (context != null) {
+                        state = context.getInteger("phase");
+                    }
+                }
+                if (state < 5) {
+                    try {
+                        Thread.sleep(500);
+                    } catch (Exception e) {
+                        // we want to exit
+                        break;
+                    }
+                }
+            }
+            if (!p.isAlive()) {
+                ec = p.exitValue();
+                if (ec != 0) {
+                    printer().println(kind + ": " + name + " startup failure");
+                    printer().println("");
+                    String text = IOHelper.loadText(new FileInputStream(log));
+                    printer().print(text);
+                }
+            } else {
+                printer().println(kind + ": " + name + " (state: " + extractState(state) + ")");
+            }
+        }
+        if (log != null) {
+            log.delete();
+        }
+
+        return ec;
     }
 
     protected int runDebug(KameletMain main) throws Exception {
@@ -1058,8 +1408,8 @@ public class Run extends CamelCommand {
         IOHelper.close(is);
 
         content = content.replaceFirst("\\{\\{ \\.JavaVersion }}", "17");
-        if (repos != null) {
-            content = content.replaceFirst("\\{\\{ \\.MavenRepositories }}", "//REPOS " + repos);
+        if (repositories != null) {
+            content = content.replaceFirst("\\{\\{ \\.MavenRepositories }}", "//REPOS " + repositories);
         } else {
             content = content.replaceFirst("\\{\\{ \\.MavenRepositories }}", "");
         }
@@ -1072,17 +1422,17 @@ public class Run extends CamelCommand {
         sb.append(String.format("//DEPS org.apache.camel:camel-main:%s%n", camelVersion));
         sb.append(String.format("//DEPS org.apache.camel:camel-java-joor-dsl:%s%n", camelVersion));
         sb.append(String.format("//DEPS org.apache.camel:camel-kamelet:%s%n", camelVersion));
+        sb.append(String.format("//DEPS org.apache.camel:camel-kamelet-main:%s%n", camelVersion));
+        if (VersionHelper.isGE(camelVersion, "3.19.0")) {
+            sb.append(String.format("//DEPS org.apache.camel:camel-cli-connector:%s%n", camelVersion));
+        }
         content = content.replaceFirst("\\{\\{ \\.CamelDependencies }}", sb.toString());
 
-        // use apache distribution of camel-jbang
+        // use apache distribution of camel-jbang/github-resolver
         String v = camelVersion.substring(0, camelVersion.lastIndexOf('.'));
         sb = new StringBuilder();
         sb.append(String.format("//DEPS org.apache.camel:camel-jbang-core:%s%n", v));
-        sb.append(String.format("//DEPS org.apache.camel:camel-kamelet-main:%s%n", v));
         sb.append(String.format("//DEPS org.apache.camel:camel-resourceresolver-github:%s%n", v));
-        if (VersionHelper.isGE(v, "3.19.0")) {
-            sb.append(String.format("//DEPS org.apache.camel:camel-cli-connector:%s%n", v));
-        }
         content = content.replaceFirst("\\{\\{ \\.CamelJBangDependencies }}", sb.toString());
 
         sb = new StringBuilder();
@@ -1090,18 +1440,27 @@ public class Run extends CamelCommand {
         content = content.replaceFirst("\\{\\{ \\.CamelKameletsDependencies }}", sb.toString());
 
         String fn = CommandLineHelper.CAMEL_JBANG_WORK_DIR + "/CustomCamelJBang.java";
-        Files.write(Paths.get(fn), content.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(Paths.get(fn), content);
 
-        List<String> cmds = new ArrayList<>(spec.commandLine().getParseResult().originalArgs());
+        List<String> cmds;
+        if (spec != null) {
+            cmds = new ArrayList<>(spec.commandLine().getParseResult().originalArgs());
+        } else {
+            cmds = new ArrayList<>();
+            cmds.add("run");
+        }
 
         if (background) {
             cmds.remove("--background=true");
             cmds.remove("--background");
+            cmds.remove("--background-wait=true");
+            cmds.remove("--background-wait=false");
+            cmds.remove("--background-wait");
         }
-        if (repos != null) {
+        if (repositories != null) {
             if (!VersionHelper.isGE(v, "3.18.1")) {
                 // --repos is not supported in 3.18.0 or older, so remove
-                cmds.remove("--repos=" + repos);
+                cmds.remove("--repos=" + repositories);
             }
         }
 
@@ -1116,13 +1475,7 @@ public class Run extends CamelCommand {
         ProcessBuilder pb = new ProcessBuilder();
         pb.command(jbangArgs);
         if (background) {
-            Process p = pb.start();
-            this.spawnPid = p.pid();
-            if (!silentRun && !transformRun && !transformMessageRun) {
-                printer().println("Running Camel integration: " + name + " (version: " + camelVersion
-                                  + ") in background with PID: " + p.pid());
-            }
-            return 0;
+            return runBackgroundProcess(pb, "Camel Main");
         } else {
             pb.inheritIO(); // run in foreground (with IO so logs are visible)
             Process p = pb.start();
@@ -1144,20 +1497,23 @@ public class Run extends CamelCommand {
         return main.getExitCode();
     }
 
-    private String loadFromCode(String code) throws IOException {
-        String fn = CommandLineHelper.CAMEL_JBANG_WORK_DIR + "/CodeRoute.java";
+    private String loadFromCode(String code, String name, boolean file) throws IOException {
+        String fn = CommandLineHelper.CAMEL_JBANG_WORK_DIR + "/" + name + ".java";
         InputStream is = Run.class.getClassLoader().getResourceAsStream("templates/code-java.tmpl");
         String content = IOHelper.loadText(is);
         IOHelper.close(is);
-        // need to replace single quote as double quotes and end with semicolon
-        code = code.replace("'", "\"");
-        code = code.trim();
+        if (!file) {
+            // need to replace single quote as double quotes (from input string)
+            code = code.replace("'", "\"");
+            code = code.trim();
+        }
+        // ensure the code ends with semicolon to finish the java statement
         if (!code.endsWith(";")) {
             code = code + ";";
         }
-        content = content.replaceFirst("\\{\\{ \\.Name }}", "CodeRoute");
-        content = content.replaceFirst("\\{\\{ \\.Code }}", code);
-        Files.write(Paths.get(fn), content.getBytes(StandardCharsets.UTF_8));
+        content = StringHelper.replaceFirst(content, "{{ .Name }}", name);
+        content = StringHelper.replaceFirst(content, "{{ .Code }}", code);
+        Files.writeString(Paths.get(fn), content);
         return "file:" + fn;
     }
 
@@ -1232,8 +1588,8 @@ public class Run extends CamelCommand {
             if ("java".equals(ext)) {
                 String fqn = determineClassName(t.toString());
                 if (fqn == null) {
-                    throw new IllegalArgumentException(
-                            "Cannot determine the Java class name from the source in the clipboard");
+                    // wrap code in wrapper
+                    return loadFromCode(t.toString(), "ClipboardRoute", true);
                 }
                 // drop package in file name
                 String cn = fqn;
@@ -1242,7 +1598,7 @@ public class Run extends CamelCommand {
                 }
                 fn = cn + ".java";
             }
-            Files.write(Paths.get(fn), t.toString().getBytes(StandardCharsets.UTF_8));
+            Files.writeString(Paths.get(fn), t.toString());
             file = "file:" + fn;
         }
         return file;
@@ -1251,7 +1607,7 @@ public class Run extends CamelCommand {
     private KameletMain createMainInstance() {
         KameletMain main;
         if (localKameletDir == null || localKameletDir.isEmpty()) {
-            main = new KameletMain();
+            main = new KameletMain(CAMEL_INSTANCE_TYPE);
         } else {
             StringJoiner sj = new StringJoiner(",");
             String[] parts = localKameletDir.split(",");
@@ -1268,28 +1624,53 @@ public class Run extends CamelCommand {
                 }
                 sj.add(part);
             }
-            main = new KameletMain(sj.toString());
+            main = new KameletMain(CAMEL_INSTANCE_TYPE, sj.toString());
             writeSettings("camel.jbang.localKameletDir", sj.toString());
         }
         return main;
     }
 
-    private void configureLogging() {
-        if (silentRun) {
-            // do not configure logging
-        } else if (logging) {
-            RuntimeUtil.configureLog(loggingLevel, loggingColor, loggingJson, scriptRun, false, loggingConfigPath);
+    private void configureLogging() throws Exception {
+        if (logging) {
+            // allow to configure individual logging levels in application.properties
+            Properties prop = loadProfileProperties();
+            if (prop != null) {
+                for (Object obj : prop.keySet()) {
+                    String key = obj.toString();
+                    String value = prop.getProperty(key);
+                    if (key.startsWith("logging.level.")) {
+                        key = key.substring(14);
+                    } else if (key.startsWith("quarkus.log.category.")) {
+                        key = key.substring(21);
+                        if (key.endsWith(".level")) {
+                            key = key.substring(0, key.length() - 6);
+                        }
+                    } else {
+                        continue;
+                    }
+                    key = StringHelper.removeLeadingAndEndingQuotes(key);
+                    String line = key + "=" + value;
+                    String line2 = key + " = " + value;
+                    if (!loggingCategory.contains(line) && !loggingCategory.contains(line2)) {
+                        loggingCategory.add(line);
+                    }
+                }
+            }
+            RuntimeUtil.configureLog(loggingLevel, loggingColor, loggingJson, scriptRun, false, loggingConfigPath,
+                    loggingCategory);
             writeSettings("loggingLevel", loggingLevel);
             writeSettings("loggingColor", loggingColor ? "true" : "false");
             writeSettings("loggingJson", loggingJson ? "true" : "false");
             if (!scriptRun) {
                 // remember log file
                 String name = RuntimeUtil.getPid() + ".log";
-                logFile = new File(CommandLineHelper.getCamelDir(), name);
+                final File logDir = CommandLineHelper.getCamelDir();
+                logDir.mkdirs(); //make sure the parent dir exists
+                logFile = new File(logDir, name);
                 logFile.deleteOnExit();
             }
         } else {
-            RuntimeUtil.configureLog("off", false, false, false, false, null);
+            RuntimeUtil.configureLog("off", false, false, false, false, null, null);
             writeSettings("loggingLevel", "off");
         }
     }
@@ -1300,24 +1681,17 @@ public class Run extends CamelCommand {
             throw new FileNotFoundException("Cannot find file: " + file);
         }
 
-        ObjectMapper mapper;
-        boolean yaml = file.getName().endsWith(".yaml") || file.getName().endsWith(".yml");
-        if (yaml) {
-            mapper = new YAMLMapper();
-        } else {
-            mapper = new ObjectMapper();
-        }
-        ObjectNode node = (ObjectNode) mapper.readTree(file);
-        OpenApiDocument document = (OpenApiDocument) Library.readDocument(node);
-        RuntimeUtil.setRootLoggingLevel("off");
-        try {
-            try (CamelContext context = new DefaultCamelContext()) {
-                String out = RestDslGenerator.toYaml(document).generate(context, false);
-                Files.write(Paths.get(OPENAPI_GENERATED_FILE), out.getBytes());
-            }
-        } finally {
-            RuntimeUtil.setRootLoggingLevel(loggingLevel);
-        }
+        InputStream is = Run.class.getClassLoader().getResourceAsStream("templates/rest-dsl.yaml.tmpl");
+        String content = IOHelper.loadText(is);
+        IOHelper.close(is);
+
+        String onlyName = file.getPath();
+        content = content.replaceFirst("\\{\\{ \\.Spec }}", onlyName);
+
+        Files.writeString(Paths.get(OPENAPI_GENERATED_FILE), content);
+
+        // we need to include the spec on the classpath
+        files.add(openapi);
     }
 
     private boolean knownFile(String file) throws Exception {
@@ -1326,36 +1700,38 @@ public class Run extends CamelCommand {
         if ("kamelet.yaml".equals(ext)) {
             return true;
         }
-
         String ext2 = FileUtil.onlyExt(file, true);
         if (ext2 != null) {
-            boolean github = file.startsWith("github:") || file.startsWith("https://github.com/")
-                    || file.startsWith("https://gist.github.com/");
+            SourceScheme sourceScheme = SourceScheme.fromUri(file);
             // special for yaml or xml, as we need to check if they have camel or not
-            if (!github && ("xml".equals(ext2) || "yaml".equals(ext2))) {
+            if (!sourceScheme.isRemote() && ("xml".equals(ext2) || "yaml".equals(ext2))) {
                 // load content into memory
-                try (FileInputStream fis = new FileInputStream(file)) {
-                    if ("xml".equals(ext2)) {
-                        XmlStreamDetector detector = new XmlStreamDetector(fis);
-                        XmlStreamInfo info = detector.information();
-                        if (!info.isValid()) {
-                            return false;
-                        }
-                        return ACCEPTED_XML_ROOT_ELEMENTS.contains(info.getRootElementName());
-                    } else {
-                        String data = IOHelper.loadText(fis);
-                        // also support Camel K integrations and Pipes. And KameletBinding for backward compatibility
-                        return data.contains("- from:") || data.contains("- route:") || data.contains("- route-configuration:")
-                                || data.contains("- rest:") || data.contains("- beans:")
-                                || data.contains("KameletBinding")
-                                || data.contains("Pipe")
-                                || data.contains("kind: Integration");
+                Source source = SourceHelper.resolveSource(file);
+                if ("xml".equals(ext2)) {
+                    XmlStreamDetector detector = new XmlStreamDetector(
+                            new ByteArrayInputStream(source.content().getBytes(StandardCharsets.UTF_8)));
+                    XmlStreamInfo info = detector.information();
+                    if (!info.isValid()) {
+                        return false;
                     }
+                    return ACCEPTED_XML_ROOT_ELEMENTS.contains(info.getRootElementName());
+                } else {
+                    // TODO: we probably need a way to parse the content and match against the YAML DSL expected by Camel
+                    // This check looks very fragile
+                    return source.content().contains("- from:")
+                            || source.content().contains("- route:")
+                            || source.content().contains("- routeTemplate") || source.content().contains("- route-template:")
+                            || source.content().contains("- routeConfiguration:")
+                            || source.content().contains("- route-configuration:")
+                            || source.content().contains("- rest:")
+                            || source.content().contains("- beans:")
+                            // also support Pipes.
+                            || source.content().contains("Pipe");
                 }
             }
             // if the ext is an accepted file then we include it as a potential route
             // (java files need to be included as route to support pojos/processors with routes)
-            return Arrays.stream(ACCEPTED_FILE_EXT).anyMatch(e -> e.equalsIgnoreCase(ext2));
+            return SourceHelper.isAcceptedSourceFile(ext2);
         } else {
             // assume match as it can be wildcard or dir
             return true;
@@ -1400,7 +1776,7 @@ public class Run extends CamelCommand {
         }
 
         // is the file excluded?
-        if (isExcluded(name, exclude)) {
+        if (isExcluded(name, excludes)) {
             return true;
         }
 
@@ -1423,9 +1799,9 @@ public class Run extends CamelCommand {
         return false;
     }
 
-    private static boolean isExcluded(String name, String exclude) {
-        if (exclude != null) {
-            for (String pattern : exclude.split(",")) {
+    private static boolean isExcluded(String name, List<String> excludes) {
+        if (excludes != null) {
+            for (String pattern : excludes) {
                 pattern = pattern.trim();
                 if (AntPathMatcher.INSTANCE.match(pattern, name)) {
                     return true;
@@ -1433,6 +1809,14 @@ public class Run extends CamelCommand {
             }
         }
         return false;
+    }
+
+    private boolean isScriptFile(String name) {
+        return name.endsWith(".sh");
+    }
+
+    private boolean isTlsFile(String name) {
+        return name.endsWith(".crt") || name.endsWith(".key") || name.endsWith(".pem");
     }
 
     private boolean jkubeFile(String name) {
@@ -1530,7 +1914,7 @@ public class Run extends CamelCommand {
         @Override
         public void onDownloadDependency(String groupId, String artifactId, String version) {
             String line = "mvn:" + groupId + ":" + artifactId;
-            if (version != null) {
+            if (ObjectHelper.isNotEmpty(version)) {
                 line += ":" + version;
             }
             if (!downloaded.contains(line)) {
@@ -1609,4 +1993,35 @@ public class Run extends CamelCommand {
             cmds.add(0, "camel");
         }
     }
+
+    private JsonObject loadStatus(long pid) {
+        try {
+            File f = getStatusFile(Long.toString(pid));
+            if (f != null) {
+                FileInputStream fis = new FileInputStream(f);
+                String text = IOHelper.loadText(fis);
+                IOHelper.close(fis);
+                return (JsonObject) Jsoner.deserialize(text);
+            }
+        } catch (Exception e) {
+            // ignore
+        }
+        return null;
+    }
+
+    @Override
+    protected Printer printer() {
+        // Export run should be silent
+        if (exportRun) {
+            if (quietPrinter == null) {
+                quietPrinter = new Printer.QuietPrinter(super.printer());
+            }
+
+            CommandHelper.setPrinter(quietPrinter);
+            return quietPrinter;
+        }
+
+        return super.printer();
+    }
+
 }
